<resources>
    <string name="app_name">Finance</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Finance</string>
    <string name="nav_header_subtitle">Tu gestor de finanzas de confianza!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_moneda">Cambio Monetario</string>
    <string name="menu_estadisticas">Visualizar Estadisticas</string>
    <string name="menu_calculadora">Calculadora</string>
    <string name="menu_pagos">Division de Pagos</string>

    <string name="recomendacionDiaria">
        Antes de gastar tu dinero, recuerda distinguir
        entre caprichos y necesidades! Tu balance de ahorros dependera de ello!</string>
    <string name="titrecomendacionDiaria">Recomendacion del Dia:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="estadisticas">Estadisticas de sus transacciones:</string>
    <string name="moneda">Selecione la moneda de su preferencia</string>
    <string name="calculadora">Introduzca la operacion a realizar:</string>
    <string name="pagos">Seleccione un grupo para dividir la cuenta:</string>
    <string name="inicio">Registre sus transacciones!</string>

    <string name="saldo">Saldo disponible:</string>
    <string name="saldo_monedero">0000</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>