<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/inicioFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/monedaFragment"
            android:icon="@drawable/ic_money"
            android:title="@string/menu_moneda" />
        <item
            android:id="@+id/estadisticasFragment"
            android:icon="@drawable/ic_stads"
            android:title="@string/menu_estadisticas" />
        <item
            android:id="@+id/calculadoraFragment"
            android:icon="@drawable/ic_calculator"
            android:title="@string/menu_calculadora" />
        <item
            android:id="@+id/pagosFragment"
            android:icon="@drawable/ic_people"
            android:title="@string/menu_pagos" />

    </group>
</menu>